{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 1645,
  "lineage": "7a1ecec0-70b3-42b6-57a9-b190728e4be7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ogurim_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b939e8bfac72360",
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:elastic-ip/eipalloc-02b939e8bfac72360",
            "domain": "vpc",
            "id": "eipalloc-02b939e8bfac72360",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-164-13-244.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.13.244",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ogurim_ins1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6e6a06d11d7777d",
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:instance/i-0b3f331e5a17d85fa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3f331e5a17d85fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ogurim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079bcb627d6cb8c80",
            "private_dns": "ip-172-16-0-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.11",
            "public_dns": "ec2-43-203-141-118.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.141.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d866f2250a00badb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e8a13472496c5a6",
            "tags": {
              "Name": "ogurim-ins1"
            },
            "tags_all": {
              "Name": "ogurim-ins1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0155923f7f9a16a3f",
              "sg-05032bea461ea1ea1",
              "sg-0c4715d7a215caecc"
            ]
          },
          "dependencies": [
            "aws_security_group.ogurim_dbsg",
            "aws_security_group.ogurim_sg",
            "aws_security_group.ogurim_websg",
            "aws_subnet.ogurim_sub_dca",
            "aws_vpc.ogurim_vpc",
            "data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ogurim_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:internet-gateway/igw-0848cd6bd1ee1e56c",
            "id": "igw-0848cd6bd1ee1e56c",
            "owner_id": "339713119714",
            "tags": {
              "Name": "ogurim-ig"
            },
            "tags_all": {
              "Name": "ogurim-ig"
            },
            "vpc_id": "vpc-0d68e47ce7151466d"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ogurim_nigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b939e8bfac72360",
            "association_id": "eipassoc-089264c959e3375f9",
            "connectivity_type": "public",
            "id": "nat-0ad84f05ae6071a78",
            "network_interface_id": "eni-092852fdef25babea",
            "private_ip": "172.16.0.21",
            "public_ip": "15.164.13.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e8a13472496c5a6",
            "tags": {
              "Name": "ogurim-nigw"
            },
            "tags_all": {
              "Name": "ogurim-nigw"
            }
          },
          "dependencies": [
            "aws_eip.ogurim_eip",
            "aws_internet_gateway.ogurim_igw",
            "aws_subnet.ogurim_sub_dca",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ogurim_nrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:route-table/rtb-0cdc787d692726aae",
            "id": "rtb-0cdc787d692726aae",
            "owner_id": "339713119714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ad84f05ae6071a78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ogurim-nrt"
            },
            "tags_all": {
              "Name": "ogurim-nrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d68e47ce7151466d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ogurim_eip",
            "aws_internet_gateway.ogurim_igw",
            "aws_nat_gateway.ogurim_nigw",
            "aws_subnet.ogurim_sub_dca",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ogurim_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:route-table/rtb-0fab9ed77b0dce200",
            "id": "rtb-0fab9ed77b0dce200",
            "owner_id": "339713119714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0848cd6bd1ee1e56c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ogurim-rt"
            },
            "tags_all": {
              "Name": "ogurim-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d68e47ce7151466d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ogurim_igw",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_nrtas_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff69a46888bc6c19",
            "route_table_id": "rtb-0cdc787d692726aae",
            "subnet_id": "subnet-0493a7f04f70e40f4"
          },
          "dependencies": [
            "aws_eip.ogurim_eip",
            "aws_internet_gateway.ogurim_igw",
            "aws_nat_gateway.ogurim_nigw",
            "aws_route_table.ogurim_nrt",
            "aws_subnet.ogurim_sub_dca",
            "aws_subnet.ogurim_sub_dca_1",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_nrtas_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044d041dec017ef32",
            "route_table_id": "rtb-0cdc787d692726aae",
            "subnet_id": "subnet-06044facf6c5e1d62"
          },
          "dependencies": [
            "aws_eip.ogurim_eip",
            "aws_internet_gateway.ogurim_igw",
            "aws_nat_gateway.ogurim_nigw",
            "aws_route_table.ogurim_nrt",
            "aws_subnet.ogurim_sub_dca",
            "aws_subnet.ogurim_sub_dcc_1",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_rtas_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f31822a504e2dcb",
            "route_table_id": "rtb-0fab9ed77b0dce200",
            "subnet_id": "subnet-03e8a13472496c5a6"
          },
          "dependencies": [
            "aws_internet_gateway.ogurim_igw",
            "aws_route_table.ogurim_rt",
            "aws_subnet.ogurim_sub_dca",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ogurim_rtas_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c74bc2364d131f3b",
            "route_table_id": "rtb-0fab9ed77b0dce200",
            "subnet_id": "subnet-009d0f2bf2339e9bb"
          },
          "dependencies": [
            "aws_internet_gateway.ogurim_igw",
            "aws_route_table.ogurim_rt",
            "aws_subnet.ogurim_sub_dcc",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ogurim_dbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-05032bea461ea1ea1",
            "description": "mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05032bea461ea1ea1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0155923f7f9a16a3f"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0155923f7f9a16a3f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ogurim-dbsg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ogurim-dbsg"
            },
            "tags_all": {
              "Name": "ogurim-dbsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d68e47ce7151466d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ogurim_sg",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ogurim_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-0155923f7f9a16a3f",
            "description": "default-ssh-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0155923f7f9a16a3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ogurim-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ogurim-sg"
            },
            "tags_all": {
              "Name": "ogurim-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d68e47ce7151466d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ogurim_websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-0c4715d7a215caecc",
            "description": "http-docker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4715d7a215caecc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0155923f7f9a16a3f"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http(docker)",
                "from_port": 61080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 61080
              }
            ],
            "name": "ogurim-websg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ogurim-websg"
            },
            "tags_all": {
              "Name": "ogurim-websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d68e47ce7151466d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ogurim_sg",
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_sub_dca",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-03e8a13472496c5a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e8a13472496c5a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogurim-sub-dca"
            },
            "tags_all": {
              "Name": "ogurim-sub-dca"
            },
            "vpc_id": "vpc-0d68e47ce7151466d"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_sub_dca_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-0493a7f04f70e40f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0493a7f04f70e40f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogurim-sub-dca-1"
            },
            "tags_all": {
              "Name": "ogurim-sub-dca-1"
            },
            "vpc_id": "vpc-0d68e47ce7151466d"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_sub_dcc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-009d0f2bf2339e9bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009d0f2bf2339e9bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogurim-sub-dcc"
            },
            "tags_all": {
              "Name": "ogurim-sub-dcc"
            },
            "vpc_id": "vpc-0d68e47ce7151466d"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ogurim_sub_dcc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-06044facf6c5e1d62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06044facf6c5e1d62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogurim-sub-dcc-1"
            },
            "tags_all": {
              "Name": "ogurim-sub-dcc-1"
            },
            "vpc_id": "vpc-0d68e47ce7151466d"
          },
          "dependencies": [
            "aws_vpc.ogurim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ogurim_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:vpc/vpc-0d68e47ce7151466d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a9593486771b1705",
            "default_route_table_id": "rtb-0549c21e4b93e86ef",
            "default_security_group_id": "sg-062729146e641e4b3",
            "dhcp_options_id": "dopt-0a67717d8f23193c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d68e47ce7151466d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0549c21e4b93e86ef",
            "owner_id": "339713119714",
            "tags": {
              "Name": "ogurim-vpc"
            },
            "tags_all": {
              "Name": "ogurim-vpc"
            }
          }
        }
      ]
    }
  ]
}